# mlops_try

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  mypy.ini  nothing  observability.py  pyproject.toml  requirements.txt  sales.csv  settings.py  test_api.py  test_api.py.save  total_sales.py
automation/: bench_io.py  cli.py  comment_targets.txt  comments_core.py  keywords.txt  migrate_csv_to_db.py  nightreign_updates.py  observability.py  quality.py  query_articles.py  scrape_comments.py  scrape_titles.py  scrape_twitch.py  storage.py  targets.txt
data/: comments-20251014.csv  comments-20251015.csv  comments-20251016.csv  comments-20251017.csv  comments-20251018.csv  comments-20251019.csv  comments-20251020.csv  comments-20251021.csv  comments-20251022.csv  comments-20251023.csv  comments-20251024.csv  comments-20251025.csv  comments-20251115.csv  comments-20251116.csv  comments-20251123.csv  comments-20251129.csv  comments-20251130.csv  comments-20251206.csv  comments-20251213.csv  comments-20251226.csv  comments-20251227.csv  comments-20260103.csv  comments-20260111.csv  comments-20260117.csv  comments-20260127.csv  comments-20260128.csv  comments-20260131.csv  comments.csv  nightreign_latest.json  titles.csv
docs/: iris-evaluation.md  iris-ml-demo.md  iris-ml-examples.md
ml_sample/: __init__.py  eval.py  eval_cli.py  metrics_summary.py  model.py  train.py
tests/: test_api_ml_iris_validation.py  test_api_ml_predict.py  test_iris_eval.py  test_iris_eval_cli.py  test_ml_model.py  (+11 more)
(+47 files in other folders)
