[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-try"
version = "0.1.0"
description = "Personal ML/MLOps playground project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
"mlops-try" = "automation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["automation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# 代表的なルールセット: E,F(pep8/pyflakes), I(isort), UP(pyupgrade), B(bugbear)
select = ["E", "F", "I", "UP", "B"]
ignore = []
